NEXT RELEASE
============

  * New function bson_reader_reset seeks to the beginning of a BSON buffer.


Libbson-1.3.3
=============

No change since 1.3.2; released to keep pace with libmongoc's version.

-- A. Jesse Jiryu Davis


Libbson-1.3.2
=============

This is a patch release with a fix for the build system:

  * man pages couldn't be built from a distribution tarball.

Peace,

  A. Jesse Jiryu Davis


Libbson-1.3.1
=============

It is my pleasure to announce Libbson-1.3.1. This is a bugfix release:

  * bson_strnlen is off by one on Windows.
  * BSON_HAVE_STRNLEN config check used incorrectly.
  * Incompatibility with older CMake versions.
  * Wrong-sized allocation in bson_json_reader_new.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Alex Bishop
  * Jeroen Ooms

Peace,

  A. Jesse Jiryu Davis


Libbson-1.3.0
=============

It is my pleasure to announce to you the release of Libbson-1.3.0. Since the
release candidate 1.3.0-rc0, the only changes have been fixes for compiler
warnings and errors on various platforms.

All changes since the previous stable release, 1.2.1:

  * Fix potential crash in bson_strncpy on Windows.
  * Parse DBRefs correctly from JSON.
  * CMake option to disable building tests: "cmake -DENABLE_TESTS:BOOL=OFF".
  * Refactor the build system to declare library version in one place.
  * Fix compiler warnings and errors, especially with Visual Studio 2015
    and IBM XL C.
  * Combine environment's CFLAGS with configure options when building.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson
  * Mark Benvenuto
  * Petr Písař
  * xpol
  * Jose Sebastian Battig
  * Jeroen Ooms

Peace,

  A. Jesse Jiryu Davis


Libbson-1.3.0-rc0
=================

It is my pleasure to announce to you first release candidate of Libbson-1.3.0.

Changes since 1.3.0-beta0:

  * Parse DBRefs correctly from JSON.