@@ -1,7 +1,10 @@
 NEXT RELEASE
 ============
 
-  * New function bson_reader_reset seeks to the beginning of a BSON buffer.
+New features:
+
+  * bson_reader_reset seeks to the beginning of a BSON buffer.
+  * bson_steal efficiently transfers contents from one bson_t to another.
 
 
 Libbson-1.3.3
